# llm-handbook-knowledge-chat

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
scripts/: prepare_lora_dataset.py  train_lora_qwen2.py
src/campus_rag/: __init__.py  api.py  cleaner.py  cli.py  config.py  document_loader.py  embeddings.py  finetune_data.py  generator.py  ocr.py  pipeline.py  prompts.py  reranker.py  schema.py  splitter.py  vector_store.py
tests/: test_finetune_data.py  test_pipeline.py  test_splitter.py
