[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campus-rag-qa"
version = "0.1.0"
description = "基于 RAG 与模型微调的校园规章智能问答系统"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "typer>=0.12",
  "pydantic>=2",
  "PyYAML>=6",
  "PyPDF2>=3",
  "python-docx>=1",
  "numpy>=1.24,<2",
  "scikit-learn>=1.3"
]

[project.optional-dependencies]
rag = [
  "sentence-transformers>=3,<4",
  "transformers>=4.40,<5",
  "faiss-cpu>=1.8"
]
ocr = [
  "rapidocr-onnxruntime>=1.3",
  "opencv-python<4.11",
  "pytesseract>=0.3",
  "Pillow>=10"
]
finetune = [
  "transformers>=4.40,<5",
  "peft>=0.11",
  "accelerate>=0.30",
  "datasets>=2.19"
]
dev = [
  "pytest>=8"
]

[project.scripts]
campus-rag = "campus_rag.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
